Changed to JDK 18